--- a/devs.html
+++ b/devs.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    h2 {color:red;}
+    p {color:blue;}
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,5 +13,9 @@
 <body>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
+    <h2>Luis Alejandro Armadillo Martinez</h3>
+    <p>Dev Jr</p>
+    <p>1 mesesito</p>
 </body>
 </html>
+
