--- a/description.html
+++ b/description.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RC/devs</title>
+    <title>RC/Description</title>
 </head>
 <body>
-    <h3>Daniel Espinosa Arias</h3>
-    <p>Dev Jr</p>
     <h3>David Hernandez</h3>
     <p>Dev Jr</p>
     <p>Tiempo RC:1.5 en RC</p>
