Informacion de Daniel Alillo

--- a/devs.html
+++ b/devs.html
@@ -9,5 +9,13 @@
 <body>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
+
+    <!--Daniel1-->
+    <div class="Daniel">
+        
+    </div>
+    <h3>José Daniel Alillo Martínez</h3>
+    <p>Becario TI</p>
+    <p>Tiempo en RC: 3 meses</p>
 </body>
 </html>
