--- a/devs.html
+++ b/devs.html
@@ -7,6 +7,9 @@
     <title>RC/devs</title>
 </head>
 <body>
+	<h3>Jesus Tolentino Bautista</h3>
+    <p>Dev Jr</p>
+    <p>Tiempo en RC: 2 años 5 meses</p>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
 </body>
