--- a/devs.html
+++ b/devs.html
@@ -9,5 +9,9 @@
 <body>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
+
+    <h3>José Luis Martínez Sánchez</h3>
+    <p>Dev Jr</p>
+    <p>5 años</p>
 </body>
 </html>
