--- a/devs.html
+++ b/devs.html
@@ -19,6 +19,10 @@
     <h2>Luis Alejandro Armadillo Martinez</h3>
     <p>Dev Jr</p>
     <p>1 mesesito</p>
+    <h3>Gerardo Tafolla</h3>
+    <p>Dev Jr</p>
+    <p>Tiempo en RC: 1 año 4 meses</p>
+
 </body>
 </html>
 
