cambios en mi rama

--- a/devs.html
+++ b/devs.html
@@ -16,9 +16,11 @@
     <p>Tiempo en RC: 2 años 5 meses</p>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
-    <h2>Luis Alejandro Armadillo Martinez</h3>
-    <p>Dev Jr</p>
-    <p>1 mesesito</p>
+    <div>
+        <h2>Luis Alejandro Armadillo Martinez</h3>
+            <p>Dev Jr</p>
+            <p>1 mesesito</p>
+    </div>
     <p>areyes</p>
 </body>
 </html>
