--- a/Tole.html
+++ b/Tole.html
@@ -11,16 +11,11 @@
     <title>RC/devs</title>
 </head>
 <body>
-	<h1>Información cambio al arvhico Tole.html</h1>
-    <h3>Daniel Espinosa Arias</h3>
+	<h1>Archivo Nuevo</h1>
+	<h3>Jesus Tolentino Bautista</h3>
     <p>Dev Jr</p>
-    <h2>Luis Alejandro Armadillo Martinez</h3>
-    <p>Dev Jr</p>
-    <p>1 mesesito</p>
-    <p>areyes</p>
-    <h3>Gerardo Tafolla</h3>
-    <p>Dev Jr</p>
-    <p>Tiempo en RC: 1 año 4 meses</p>
+    <p>Tiempo en RC: 2 años 5 meses</p>
+    
 
 </body>
 </html>
