agregar título, quitar espacios.

--- a/devs.html
+++ b/devs.html
@@ -11,6 +11,8 @@
     <title>RC/devs</title>
 </head>
 <body>
+    <h1>Devs</h1>
+
 	<h3>Jesus Tolentino Bautista</h3>
     <p>Dev Jr</p>
     <p>Tiempo en RC: 2 años 5 meses</p>
@@ -33,4 +35,3 @@
 
 </body>
 </html>
-
