--- a/devs.html
+++ b/devs.html
@@ -23,7 +23,7 @@
     <h2>Luis Alejandro Armadillo Martinez</h3>
     <p>Dev Jr</p>
     <p>1 mesesito</p>
-    <p>areyes</p>
+    <p><b>areyes</b></p>
     <h3>Gerardo Tafolla</h3>
     <p>Dev Jr</p>
     <p>Tiempo en RC: 1 año 4 meses</p>
