--- a/devs.html
+++ b/devs.html
@@ -11,7 +11,7 @@
     <title>RC/devs</title>
 </head>
 <body>
-	<h1>Información eliminada</h1>
+	<h1>Información Eliminada</h1>
     <h3>Daniel Espinosa Arias</h3>
     <p>Dev Jr</p>
 
