--- a/devs.html
+++ b/devs.html
@@ -11,6 +11,7 @@
     <title>RC/devs</title>
 </head>
 <body>
+    
     <h1>Devs</h1>
 
 	<h3>Jesus Tolentino Bautista</h3>
@@ -34,7 +35,7 @@
     
     <h3>Fernando Luis</h3>
     <p>Dev Jr</p>
-
     <h4>Adios al Home office</h4>
+    <h1>Alillo Git</h1>
 </body>
 </html>
